--- a/src/WorkflowEngine.Sdk/WorkflowEngine.Sdk.csproj
+++ b/src/WorkflowEngine.Sdk/WorkflowEngine.Sdk.csproj
@@ -18,11 +18,11 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0" PrivateAssets="All" />
-    <PackageReference Include="Nexus.Link.Capabilities.WorkflowMgmt.Abstract" Version="1.3.0-rc01" />
+    <PackageReference Include="Nexus.Link.Capabilities.WorkflowMgmt.Abstract" Version="1.3.1" />
     <PackageReference Include="Nexus.Link.Capabilities.AsyncRequestMgmt.Abstract" Version="1.0.2-rc01" />
     <PackageReference Include="Nexus.Link.Libraries.Core" Version="5.7.1" />
     <PackageReference Include="Nexus.Link.Libraries.Crud.Web" Version="2.8.0" />
-    <PackageReference Include="Nexus.Link.Libraries.Crud" Version="3.5.1" />
+    <PackageReference Include="Nexus.Link.Libraries.Crud" Version="3.5.2" />
     <PackageReference Include="Nexus.Link.Libraries.Web" Version="2.22.1" />
     <PackageReference Include="Nexus.Link.Libraries.Web.AspNet" Version="2.29.5" />
   </ItemGroup>
@@ -38,7 +38,7 @@
 
   <PropertyGroup>
     <PackageId>Nexus.Link.WorkflowEngine.Sdk</PackageId>
-    <Version>1.11.1-rc01</Version>
+    <Version>1.12.0</Version>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
     <PackageTags>nexus;link;fulcrum;lever</PackageTags>
     <Authors>XLENT Link</Authors>
@@ -48,6 +48,8 @@
     <Copyright>Copyright ©2021 Xlent Link AB</Copyright>
     <IncludeSymbols>true</IncludeSymbols>
     <PackageReleaseNotes>
+      1.12.0 Now preloads activity information when a workflow starts
+      1.11.2 Case confusion
       1.11.1 Renamed some classes
       1.11.0 Moved FailUrgency to ActivityVersion
       1.10.0 Now cancels workflow if FailUrgency is CancelWorkflow. Initial load of workflow data
