--- a/src/Services.Contracts/Services.Contracts.csproj
+++ b/src/Services.Contracts/Services.Contracts.csproj
@@ -19,7 +19,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0" PrivateAssets="All" />
     <PackageReference Include="Nexus.Link.Libraries.Core" Version="5.7.1" />
-    <PackageReference Include="Nexus.Link.Libraries.Crud" Version="3.5.2" />
+    <PackageReference Include="Nexus.Link.Libraries.Crud" Version="3.6.0-alpha01" />
   </ItemGroup>
 
   <PropertyGroup>
