--- a/src/WorkflowEngine.Sdk.Persistence.Abstract/WorkflowEngine.Sdk.Persistence.Abstract.csproj
+++ b/src/WorkflowEngine.Sdk.Persistence.Abstract/WorkflowEngine.Sdk.Persistence.Abstract.csproj
@@ -18,7 +18,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0" PrivateAssets="All" />
-    <PackageReference Include="Nexus.Link.Libraries.Crud" Version="3.5.2" />
+    <PackageReference Include="Nexus.Link.Libraries.Crud" Version="3.6.0-alpha01" />
     <PackageReference Include="Nexus.Link.Libraries.SqlServer" Version="2.10.1" />
   </ItemGroup>
 
