--- a/src/WorkflowEngine.Sdk.Persistence.Sql/WorkflowEngine.Sdk.Persistence.Sql.csproj
+++ b/src/WorkflowEngine.Sdk.Persistence.Sql/WorkflowEngine.Sdk.Persistence.Sql.csproj
@@ -41,7 +41,7 @@
 
   <PropertyGroup>
     <PackageId>Nexus.Link.WorkflowEngine.Sdk.Persistence.Sql</PackageId>
-    <Version>1.1.0</Version>
+    <Version>1.1.1</Version>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
     <PackageTags>nexus;link;fulcrum;lever</PackageTags>
     <Authors>XLENT Link</Authors>
@@ -51,6 +51,7 @@
     <Copyright>Copyright ©2021 Xlent Link AB</Copyright>
     <IncludeSymbols>true</IncludeSymbols>
     <PackageReleaseNotes>
+      1.1.1 DatabasePatchSettings.DatabasePatchLevelVerifier is now optional and obsolete
       1.1.0 Moved FailUrgency to ActivityVersion
       1.0.7 FailUrgency NOT NULL
       1.0.6 Support for Cancel workflow
@@ -59,7 +60,7 @@
       1.0.3 Refactored ActivityInstance with respect to fields for failed activities.
       1.0.2 Bugfixes
       1.0.0 First release
-	</PackageReleaseNotes>
+    </PackageReleaseNotes>
     <LangVersion>latest</LangVersion>
   </PropertyGroup>
 
