--- a/src/WorkflowEngine.Sdk/WorkflowEngine.Sdk.csproj
+++ b/src/WorkflowEngine.Sdk/WorkflowEngine.Sdk.csproj
@@ -38,7 +38,7 @@
 
   <PropertyGroup>
     <PackageId>Nexus.Link.WorkflowEngine.Sdk</PackageId>
-    <Version>1.12.3</Version>
+    <Version>1.12.4</Version>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
     <PackageTags>nexus;link;fulcrum;lever</PackageTags>
     <Authors>XLENT Link</Authors>
@@ -48,10 +48,9 @@
     <Copyright>Copyright ©2021 Xlent Link AB</Copyright>
     <IncludeSymbols>true</IncludeSymbols>
     <PackageReleaseNotes>
+      1.12.4 Performance optimizations
       1.12.3 DatabasePatchSettings.DatabasePatchLevelVerifier is now optional and obsolete
       1.12.2 Fix in rest clients paths
-      1.12.2 Removed performance measurement
-      1.12.1 Added performance measurement
       1.12.0 Now preloads activity information when a workflow starts
       1.11.2 Case confusion
       1.11.1 Renamed some classes
