--- a/.gitignore
+++ b/.gitignore
@@ -332,3 +332,4 @@ ASALocalRun/
 /src/Services.Contracts/Nexus.Link.Services.Contracts.xml
 /src/Services.Controllers/Nexus.Link.Services.Controllers.xml
 /src/AsyncManager.Sdk/AsyncManager.Sdk.xml
+/Nexus.Link.Workflow.SDK.sln.DotSettings
