--- a/src/WorkflowEngine.Sdk/WorkflowEngine.Sdk.csproj
+++ b/src/WorkflowEngine.Sdk/WorkflowEngine.Sdk.csproj
@@ -18,9 +18,9 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0" PrivateAssets="All" />
-    <PackageReference Include="Nexus.Link.Capabilities.WorkflowMgmt.Abstract" Version="1.5.0-alfa01" />
+    <PackageReference Include="Nexus.Link.Capabilities.WorkflowMgmt.Abstract" Version="1.5.0" />
     <PackageReference Include="Nexus.Link.Capabilities.AsyncRequestMgmt.Abstract" Version="1.0.2-rc01" />
-    <PackageReference Include="Nexus.Link.Libraries.Core" Version="5.8.0-alfa01" />
+    <PackageReference Include="Nexus.Link.Libraries.Core" Version="5.8.0" />
     <PackageReference Include="Nexus.Link.Libraries.Crud.Web" Version="2.8.0" />
     <PackageReference Include="Nexus.Link.Libraries.Crud" Version="3.6.0" />
     <PackageReference Include="Nexus.Link.Libraries.Web" Version="2.22.1" />
