--- a/src/WorkflowEngine.Sdk/WorkflowEngine.Sdk.csproj
+++ b/src/WorkflowEngine.Sdk/WorkflowEngine.Sdk.csproj
@@ -34,7 +34,7 @@
 
   <PropertyGroup>
     <PackageId>Nexus.Link.WorkflowEngine.Sdk</PackageId>
-    <Version>2.0.0</Version>
+    <Version>2.0.1</Version>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
     <PackageTags>nexus;link;fulcrum;lever</PackageTags>
     <Authors>XLENT Link</Authors>
@@ -44,7 +44,8 @@
     <Copyright>Copyright ©2021 Xlent Link AB</Copyright>
     <IncludeSymbols>true</IncludeSymbols>
     <PackageReleaseNotes>
-      2.0.0 Refactored. One breaking change: You need to specify the activity position when calling the CreateActivity() method.
+      2.0.1 Changed som method signatures
+      2.0.0 Refactored. One breaking change: You need to specify the activity position when calling the CreateActivity() method
       1.12.5 Fixed bug in ActivityExecutor
       1.12.4 Performance optimizations
       1.12.3 DatabasePatchSettings.DatabasePatchLevelVerifier is now optional and obsolete
