- Updated nexus nugets - Workflows aspnet: 1.2.0 Support for setting Success and Failed on an ActivityInstance - Workflows sdk: 3.1.0 Support for setting Success and Failed on an ActivityInstance

--- a/src/WorkflowEngine.Sdk/WorkflowEngine.Sdk.csproj
+++ b/src/WorkflowEngine.Sdk/WorkflowEngine.Sdk.csproj
@@ -18,11 +18,11 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0" PrivateAssets="All" />
-    <PackageReference Include="Nexus.Link.Capabilities.WorkflowMgmt.Abstract" Version="2.0.0" />
+    <PackageReference Include="Nexus.Link.Capabilities.WorkflowMgmt.Abstract" Version="2.1.1" />
     <PackageReference Include="Nexus.Link.Capabilities.AsyncRequestMgmt.Abstract" Version="1.0.2-rc01" />
     <PackageReference Include="Nexus.Link.Libraries.Core" Version="5.8.0" />
     <PackageReference Include="Nexus.Link.Libraries.Crud.Web" Version="2.8.0" />
-    <PackageReference Include="Nexus.Link.Libraries.Crud" Version="3.6.0" />
+    <PackageReference Include="Nexus.Link.Libraries.Crud" Version="3.7.1" />
     <PackageReference Include="Nexus.Link.Libraries.Web" Version="2.22.1" />
     <PackageReference Include="Nexus.Link.Libraries.Web.AspNet" Version="2.29.5" />
   </ItemGroup>
@@ -38,7 +38,7 @@
 
   <PropertyGroup>
     <PackageId>Nexus.Link.WorkflowEngine.Sdk</PackageId>
-    <Version>3.0.0</Version>
+    <Version>3.1.0</Version>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
     <PackageTags>nexus;link;fulcrum;lever</PackageTags>
     <Authors>XLENT Link</Authors>
@@ -48,6 +48,7 @@
     <Copyright>Copyright ©2021 Xlent Link AB</Copyright>
     <IncludeSymbols>true</IncludeSymbols>
     <PackageReleaseNotes>
+      3.1.0 Support for setting Success and Failed on an ActivityInstance
       3.0.0 New capability contract structure.
       2.0.1 Changed som method signatures
       2.0.0 Refactored. One breaking change: You need to specify the activity position when calling the CreateActivity() method
