--- a/src/WorkflowEngine.Sdk.AspNet/WorkflowEngine.Sdk.AspNet.csproj
+++ b/src/WorkflowEngine.Sdk.AspNet/WorkflowEngine.Sdk.AspNet.csproj
@@ -25,7 +25,7 @@
 
   <PropertyGroup>
     <PackageId>Nexus.Link.WorkflowEngine.Sdk.AspNet</PackageId>
-    <Version>1.2.0</Version>
+    <Version>1.3.0</Version>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
     <PackageTags>nexus;link;fulcrum;lever</PackageTags>
     <Authors>XLENT Link</Authors>
@@ -35,6 +35,7 @@
     <Copyright>Copyright ©2021 Xlent Link AB</Copyright>
     <IncludeSymbols>true</IncludeSymbols>
     <PackageReleaseNotes>
+      1.3.0 "Runtime" => "State"
       1.2.0 Support for setting Success and Failed on an ActivityInstance
       1.1.0 Added controllers for Integration API
       1.0.2 First release
