--- a/src/AsyncManager.Sdk.AspNet/AsyncManager.Sdk.AspNet.csproj
+++ b/src/AsyncManager.Sdk.AspNet/AsyncManager.Sdk.AspNet.csproj
@@ -1,10 +1,12 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
-    <AssemblyName>Nexus.Link.WorkflowEngine.Sdk.Persistence.Memory</AssemblyName>
-    <RootNamespace>Nexus.Link.WorkflowEngine.Sdk.Persistence.Memory</RootNamespace>
+    <TargetFramework>netcoreapp2.1</TargetFramework>
+    <AssemblyName>Nexus.Link.AsyncManager.Sdk.AspNet</AssemblyName>
+    <RootNamespace>Nexus.Link.AsyncManager.Sdk.AspNet</RootNamespace>
+  </PropertyGroup>
 
+  <PropertyGroup>
     <!-- Publish the repository URL in the built .nupkg (in the NuSpec <Repository> element) -->
     <PublishRepositoryUrl>true</PublishRepositoryUrl>
 
@@ -17,29 +19,26 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0" PrivateAssets="All" />
+    <PackageReference Include="Nexus.Link.Libraries.Web.AspNet" Version="2.30.1" />
+    <PackageReference Include="Nexus.Link.Libraries.Core" Version="5.9.3" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\WorkflowEngine.Sdk.Persistence.Abstract\WorkflowEngine.Sdk.Persistence.Abstract.csproj" />
+    <ProjectReference Include="..\AsyncManager.Sdk\AsyncManager.Sdk.csproj" />
   </ItemGroup>
 
   <PropertyGroup>
-    <PackageId>Nexus.Link.WorkflowEngine.Sdk.Persistence.Memory</PackageId>
-    <Version>1.1.2</Version>
+    <PackageId>Nexus.Link.AsyncManager.Sdk.AspNet</PackageId>
+    <Version>0.0.1</Version>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
     <PackageTags>nexus;link;fulcrum;lever</PackageTags>
     <Authors>XLENT Link</Authors>
     <PackageProjectUrl></PackageProjectUrl>
     <PackageLanguage>en-US</PackageLanguage>
-    <Description>Support for the Nexus Link WorkflowEngine SDK.</Description>
+    <Description>The Nexus Link AsyncManager SDK for AspNet.</Description>
     <Copyright>Copyright ©2021 Xlent Link AB</Copyright>
     <IncludeSymbols>true</IncludeSymbols>
     <PackageReleaseNotes>
-      1.1.2 Bump
-      1.1.1 Create and Update now returns the resulting object
-      1.0.4 DatabasePatchSettings.DatabasePatchLevelVerifier is now optional and obsolete
-      1.0.3 Unique for ActivityVersionRecord
       1.0.0 First release
     </PackageReleaseNotes>
     <LangVersion>latest</LangVersion>
