--- a/src/AsyncManager.Sdk/AsyncManager.Sdk.csproj
+++ b/src/AsyncManager.Sdk/AsyncManager.Sdk.csproj
@@ -32,14 +32,15 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0" PrivateAssets="All" />
-    <PackageReference Include="Nexus.Link.Capabilities.AsyncRequestMgmt.Abstract" Version="1.0.2-rc01" />
-    <PackageReference Include="Nexus.Link.Libraries.Crud" Version="3.10.1" />
-    <PackageReference Include="Nexus.Link.Libraries.Web" Version="2.23.0" />
+    <PackageReference Include="Nexus.Link.Capabilities.AsyncRequestMgmt.Abstract" Version="1.1.0" />
+    <PackageReference Include="Nexus.Link.Libraries.Core" Version="5.9.3" />
+    <PackageReference Include="Nexus.Link.Libraries.Crud" Version="3.10.2" />
+    <PackageReference Include="Nexus.Link.Libraries.Web" Version="2.24.1" />
   </ItemGroup>
 
   <PropertyGroup>
     <PackageId>Nexus.Link.AsyncManager.Sdk</PackageId>
-    <Version>1.2.0-rc05</Version>
+    <Version>1.3.1</Version>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
     <PackageTags>nexus;link;fulcrum;lever</PackageTags>
     <Authors>XLENT Link</Authors>
@@ -49,10 +50,12 @@
     <Copyright>Copyright ©2021 Xlent Link AB</Copyright>
     <IncludeSymbols>true</IncludeSymbols>
     <PackageReleaseNotes>
-		1.2.0 IExecutionService, IExecutionResponseService; don't use Tenant in rest clients
-		1.1.1 Support for setting up rest clients with your own tenant
-		1.1.0 Refactored AsyncRequestClient. Now accepts RequestPostponedException.
-		1.0.2 First release
+      1.3.1 Bump
+      1.3.0 Moved AspNet code to separate library
+      1.2.0 IExecutionService, IExecutionResponseService; don't use Tenant in rest clients
+      1.1.1 Support for setting up rest clients with your own tenant
+      1.1.0 Refactored AsyncRequestClient. Now accepts RequestPostponedException.
+      1.0.2 First release
 	</PackageReleaseNotes>
     <LangVersion>latest</LangVersion>
   </PropertyGroup>
