--- a/src/BusinessEvents.Sdk/Nexus.Link.BusinessEvents.Sdk.csproj
+++ b/src/BusinessEvents.Sdk/Nexus.Link.BusinessEvents.Sdk.csproj
@@ -18,13 +18,13 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0" PrivateAssets="All" />
-    <PackageReference Include="Nexus.Link.Libraries.Web" Version="2.22.1" />
-    <PackageReference Include="Nexus.Link.Libraries.Core" Version="5.8.0" />
+    <PackageReference Include="Nexus.Link.Libraries.Web" Version="2.24.1" />
+    <PackageReference Include="Nexus.Link.Libraries.Core" Version="5.9.3" />
   </ItemGroup>
 
   <PropertyGroup>
     <PackageId>Nexus.Link.BusinessEvents.Sdk</PackageId>
-    <Version>3.1.4</Version>
+    <Version>3.1.5</Version>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
     <PackageTags>nexus;link;fulcrum;lever</PackageTags>
     <Authors>XLENT Link</Authors>
@@ -34,7 +34,7 @@
     <Copyright>Copyright ©2019 Xlent Link AB</Copyright>
     <IncludeSymbols>true</IncludeSymbols>
     <PackageReleaseNotes>
-      3.1.4
+      3.1.5 Bump
       3.1.3 Refactored ClientSubscriptionsClient
       3.1.2 Symbols
       3.1.1 Bump
