--- a/src/IdentityAccessManagement.Sdk/IdentityAccessManagement.Sdk.csproj
+++ b/src/IdentityAccessManagement.Sdk/IdentityAccessManagement.Sdk.csproj
@@ -18,18 +18,18 @@
 		<PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.1.3" />
 		<PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0" PrivateAssets="All" />
 		<PackageReference Include="Microsoft.Rest.ClientRuntime" Version="2.3.20" />
-		<PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="3.1.19" />
+		<PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="2.2.0" />
 		<PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.0" />
 		<PackageReference Include="Microsoft.IdentityModel.Tokens" Version="5.6.0" />
-		<PackageReference Include="Nexus.Link.Libraries.Web" Version="2.22.1" />
+		<PackageReference Include="Nexus.Link.Libraries.Web" Version="2.24.1" />
 		<PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="5.6.0" />
 		<PackageReference Include="IdentityModel" Version="5.1.0" />
-		<PackageReference Include="Nexus.Link.Libraries.Core" Version="5.8.0" />
+		<PackageReference Include="Nexus.Link.Libraries.Core" Version="5.9.3" />
 	</ItemGroup>
 
 	<PropertyGroup>
 		<PackageId>Nexus.Link.IdentityAccessManagement.Sdk</PackageId>
-		<Version>0.4.5</Version>
+		<Version>0.4.6</Version>
 		<PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
 		<PackageTags>nexus;link</PackageTags>
 		<Authors>XLENT Link</Authors>
@@ -39,7 +39,8 @@
 		<Copyright>Copyright ©2021 Xlent Link AB</Copyright>
 		<IncludeSymbols>true</IncludeSymbols>
 		<PackageReleaseNotes>
-			0.4.5 Fix symbols
+			0.4.6 Bump
+      0.4.5 Fix symbols
       0.4.4 Skip validation of options.TokenValidationParameters.ValidTypes
       0.4.3 Bump
       0.4.2 Setup FulcrumApplication.Context.CallingClientName in SaveNexusAuthorizationToExecutionContext
