--- a/src/KeyTranslator.Sdk/Keytranslator.Sdk.csproj
+++ b/src/KeyTranslator.Sdk/Keytranslator.Sdk.csproj
@@ -18,7 +18,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0" PrivateAssets="All" />
-    <PackageReference Include="Nexus.Link.Libraries.Web" Version="2.22.1" />
+    <PackageReference Include="Nexus.Link.Libraries.Web" Version="2.24.1" />
   </ItemGroup>
 
   <!--<ItemGroup>
@@ -37,7 +37,7 @@
 
   <PropertyGroup>
     <PackageId>Nexus.Link.KeyTranslator.Sdk</PackageId>
-    <Version>4.1.0</Version>
+    <Version>4.1.1</Version>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
     <PackageTags>nexus;link;fulcrum;lever</PackageTags>
     <Authors>XLENT Link</Authors>
@@ -47,6 +47,7 @@
     <Copyright>Copyright ©2019 Xlent Link AB</Copyright>
     <IncludeSymbols>true</IncludeSymbols>
     <PackageReleaseNotes>
+      4.1.1 Bump
       4.1.0 Support for deleting instance
       4.0.3 Bump
       4.0.2 Symbols
