--- a/src/WorkflowEngine.Sdk.AspNet/WorkflowEngine.Sdk.AspNet.csproj
+++ b/src/WorkflowEngine.Sdk.AspNet/WorkflowEngine.Sdk.AspNet.csproj
@@ -19,13 +19,17 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Nexus.Link.Capabilities.WorkflowMgmt.Abstract" Version="3.2.0" />
-    <PackageReference Include="Nexus.Link.Libraries.Web.AspNet" Version="2.29.6" />
+    <PackageReference Include="Nexus.Link.Libraries.Web.AspNet" Version="2.30.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\AsyncManager.Sdk.AspNet\AsyncManager.Sdk.AspNet.csproj" />
+    <ProjectReference Include="..\WorkflowEngine.Sdk\WorkflowEngine.Sdk.csproj" />
   </ItemGroup>
 
   <PropertyGroup>
     <PackageId>Nexus.Link.WorkflowEngine.Sdk.AspNet</PackageId>
-    <Version>1.4.0</Version>
+    <Version>1.5.0</Version>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
     <PackageTags>nexus;link;fulcrum;lever</PackageTags>
     <Authors>XLENT Link</Authors>
@@ -35,6 +39,7 @@
     <Copyright>Copyright ©2021 Xlent Link AB</Copyright>
     <IncludeSymbols>true</IncludeSymbols>
     <PackageReleaseNotes>
+      1.5.0 Moved inbound filter here.
       1.4.0 Support for IDistributedLock
       1.3.5 IntegrationApi controllers abstract
       1.3.4 Fix: Admin/WorkflowsController: activityInstanceId
