--- a/src/WorkflowEngine.Sdk/WorkflowEngine.Sdk.csproj
+++ b/src/WorkflowEngine.Sdk/WorkflowEngine.Sdk.csproj
@@ -38,7 +38,7 @@
 
   <PropertyGroup>
     <PackageId>Nexus.Link.WorkflowEngine.Sdk</PackageId>
-    <Version>4.4.0</Version>
+    <Version>4.4.1</Version>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
     <PackageTags>nexus;link;fulcrum;lever</PackageTags>
     <Authors>XLENT Link</Authors>
@@ -48,6 +48,7 @@
     <Copyright>Copyright ©2021 Xlent Link AB</Copyright>
     <IncludeSymbols>true</IncludeSymbols>
     <PackageReleaseNotes>
+      4.4.1 Extended IActivity
       4.4.0 Refactored SelectWorkflowVersionAsync
       4.3.2 Bump
       4.3.0 Worked through the error handling in ActivityExecutor and WorkflowExecutor
