--- a/src/WorkflowEngine.Sdk.UnitTest/WorkflowEngine.Sdk.UnitTest.csproj
+++ b/src/WorkflowEngine.Sdk.UnitTest/WorkflowEngine.Sdk.UnitTest.csproj
@@ -29,7 +29,7 @@
 
   <PropertyGroup>
     <PackageId>Nexus.Link.WorkflowEngine.Sdk.UnitTest</PackageId>
-    <Version>1.0.0</Version>
+    <Version>1.0.1</Version>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
     <PackageTags>nexus;link;fulcrum;lever</PackageTags>
     <Authors>XLENT Link</Authors>
@@ -39,6 +39,7 @@
     <Copyright>Copyright ©2021 Xlent Link AB</Copyright>
     <IncludeSymbols>true</IncludeSymbols>
     <PackageReleaseNotes>
+      1.0.1 Introduced IActivity{T}
       1.0.0 First release
     </PackageReleaseNotes>
     <LangVersion>latest</LangVersion>
