--- a/src/WorkflowEngine.Sdk.Persistence.Abstract/WorkflowEngine.Sdk.Persistence.Abstract.csproj
+++ b/src/WorkflowEngine.Sdk.Persistence.Abstract/WorkflowEngine.Sdk.Persistence.Abstract.csproj
@@ -18,14 +18,14 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0" PrivateAssets="All" />
-    <PackageReference Include="Nexus.Link.Libraries.Core" Version="5.9.3" />
-    <PackageReference Include="Nexus.Link.Libraries.Crud" Version="3.10.2" />
-    <PackageReference Include="Nexus.Link.Libraries.SqlServer" Version="2.12.2" />
+    <PackageReference Include="Nexus.Link.Libraries.Core" Version="5.10.0" />
+    <PackageReference Include="Nexus.Link.Libraries.Crud" Version="3.10.3" />
+    <PackageReference Include="Nexus.Link.Libraries.SqlServer" Version="2.13.2" />
   </ItemGroup>
 
   <PropertyGroup>
     <PackageId>Nexus.Link.WorkflowEngine.Sdk.Persistence.Abstract</PackageId>
-    <Version>2.4.0</Version>
+    <Version>2.4.2</Version>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
     <PackageTags>nexus;link;fulcrum;lever</PackageTags>
     <Authors>XLENT Link</Authors>
@@ -35,6 +35,7 @@
     <Copyright>Copyright ©2021 Xlent Link AB</Copyright>
     <IncludeSymbols>true</IncludeSymbols>
     <PackageReleaseNotes>
+      2.4.2 Bump
       2.4.0 netstandard2.1
       2.3.2 Bump
       2.3.1 Added purge threshold, changed method signatures
