--- a/src/WorkflowEngine.Sdk/WorkflowEngine.Sdk.csproj
+++ b/src/WorkflowEngine.Sdk/WorkflowEngine.Sdk.csproj
@@ -4,27 +4,32 @@
     <TargetFramework>netstandard2.1</TargetFramework>
     <AssemblyName>Nexus.Link.WorkflowEngine.Sdk</AssemblyName>
     <RootNamespace>Nexus.Link.WorkflowEngine.Sdk</RootNamespace>
+  </PropertyGroup>
 
+  <!-- Publish symbols -->
+  <PropertyGroup>
     <!-- Publish the repository URL in the built .nupkg (in the NuSpec <Repository> element) -->
     <PublishRepositoryUrl>true</PublishRepositoryUrl>
-
     <!-- Embed source files that are not tracked by the source control manager in the PDB -->
     <EmbedUntrackedSources>true</EmbedUntrackedSources>
-
     <!-- Recommended: Embed symbols containing Source Link in the main file (exe/dll) -->
     <DebugType>embedded</DebugType>
     <IncludeSymbols>true</IncludeSymbols>
   </PropertyGroup>
 
+  <!-- Publish symbols -->
   <ItemGroup>
     <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0" PrivateAssets="All" />
-    <PackageReference Include="Nexus.Link.Libraries.Core" Version="5.9.3" />
-    <PackageReference Include="Nexus.Link.Libraries.Crud.Web" Version="2.9.2" />
-    <PackageReference Include="Nexus.Link.Libraries.Crud" Version="3.10.2" />
-    <PackageReference Include="Nexus.Link.Libraries.Web" Version="2.24.4" />
-    <PackageReference Include="Nexus.Link.Capabilities.WorkflowConfiguration.Abstract" Version="1.0.0" />
-    <PackageReference Include="Nexus.Link.Capabilities.WorkflowState.Abstract" Version="1.0.0" />
-    <PackageReference Include="Nexus.Link.Components.WorkflowMgmt.Abstract" Version="1.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Nexus.Link.Libraries.Core" Version="5.10.0" />
+    <PackageReference Include="Nexus.Link.Libraries.Crud.Web" Version="2.9.3" />
+    <PackageReference Include="Nexus.Link.Libraries.Crud" Version="3.10.3" />
+    <PackageReference Include="Nexus.Link.Libraries.Web" Version="2.24.6" />
+    <PackageReference Include="Nexus.Link.Capabilities.WorkflowConfiguration.Abstract" Version="1.0.1" />
+    <PackageReference Include="Nexus.Link.Capabilities.WorkflowState.Abstract" Version="1.0.1" />
+    <PackageReference Include="Nexus.Link.Components.WorkflowMgmt.Abstract" Version="1.0.1" />
   </ItemGroup>
 
   <ItemGroup>
@@ -34,7 +39,7 @@
 
   <PropertyGroup>
     <PackageId>Nexus.Link.WorkflowEngine.Sdk</PackageId>
-    <Version>5.1.4</Version>
+    <Version>5.1.5</Version>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
     <PackageTags>nexus;link;fulcrum;lever</PackageTags>
     <Authors>XLENT Link</Authors>
@@ -44,6 +49,7 @@
     <Copyright>Copyright ©2021 Xlent Link AB</Copyright>
     <IncludeSymbols>true</IncludeSymbols>
     <PackageReleaseNotes>
+      5.1.5 Now uses ToGuidString()
       5.1.4 Missing inheritence to Activity{T}
       5.1.3 ActivityAction{T} now inherits from Activity{T}
       5.1.2 Support for larger enum values in database
