--- a/src/WorkflowEngine.Sdk.Persistence.Sql/WorkflowEngine.Sdk.Persistence.Sql.csproj
+++ b/src/WorkflowEngine.Sdk.Persistence.Sql/WorkflowEngine.Sdk.Persistence.Sql.csproj
@@ -41,7 +41,7 @@
 
   <PropertyGroup>
     <PackageId>Nexus.Link.WorkflowEngine.Sdk.Persistence.Sql</PackageId>
-    <Version>1.7.3</Version>
+    <Version>1.7.4</Version>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
     <PackageTags>nexus;link;fulcrum;lever</PackageTags>
     <Authors>XLENT Link</Authors>
@@ -51,29 +51,30 @@
     <Copyright>Copyright ©2021 Xlent Link AB</Copyright>
     <IncludeSymbols>true</IncludeSymbols>
     <PackageReleaseNotes>
+      1.7.4 New logic for patching DB
       1.7.3 Bump
       1.7.2 Support for larger enum values in database
-			1.7.1 Now sets DistributedLockTable
-			1.7.0 netstandard2.1
-			1.6.3 Bump
-			1.6.1 Added purge threshold, changed method signatures
-			1.6.0 Purge for logs
-			1.5.0 Added support for logging
-			1.4.0 Added ActivityInstanceRecordCreate.ContextAsJson
-			1.3.3 Bump
-			1.3.2 Added DistributedLock table
-			1.2.1 Corrected UNIQUE constraint for ActivityVersion
-			1.2.0 Create and Update now returns the resulting object
-			1.1.1 DatabasePatchSettings.DatabasePatchLevelVerifier is now optional and obsolete
-			1.1.0 Moved FailUrgency to ActivityVersion
-			1.0.7 FailUrgency NOT NULL
-			1.0.6 Support for Cancel workflow
-			1.0.5 Bump
-			1.0.4 CREATE CLUSTERED INDEX IX_{TableName}_RecordCreatedAt ON dbo.[{TableName}] (RecordCreatedAt)
-			1.0.3 Refactored ActivityInstance with respect to fields for failed activities.
-			1.0.2 Bugfixes
-			1.0.0 First release
-		</PackageReleaseNotes>
+      1.7.1 Now sets DistributedLockTable
+      1.7.0 netstandard2.1
+      1.6.3 Bump
+      1.6.1 Added purge threshold, changed method signatures
+      1.6.0 Purge for logs
+      1.5.0 Added support for logging
+      1.4.0 Added ActivityInstanceRecordCreate.ContextAsJson
+      1.3.3 Bump
+      1.3.2 Added DistributedLock table
+      1.2.1 Corrected UNIQUE constraint for ActivityVersion
+      1.2.0 Create and Update now returns the resulting object
+      1.1.1 DatabasePatchSettings.DatabasePatchLevelVerifier is now optional and obsolete
+      1.1.0 Moved FailUrgency to ActivityVersion
+      1.0.7 FailUrgency NOT NULL
+      1.0.6 Support for Cancel workflow
+      1.0.5 Bump
+      1.0.4 CREATE CLUSTERED INDEX IX_{TableName}_RecordCreatedAt ON dbo.[{TableName}] (RecordCreatedAt)
+      1.0.3 Refactored ActivityInstance with respect to fields for failed activities.
+      1.0.2 Bugfixes
+      1.0.0 First release
+    </PackageReleaseNotes>
     <LangVersion>latest</LangVersion>
   </PropertyGroup>
 
