--- a/src/WorkflowEngine.Sdk/WorkflowEngine.Sdk.csproj
+++ b/src/WorkflowEngine.Sdk/WorkflowEngine.Sdk.csproj
@@ -39,7 +39,7 @@
 
   <PropertyGroup>
     <PackageId>Nexus.Link.WorkflowEngine.Sdk</PackageId>
-    <Version>5.1.5</Version>
+    <Version>5.1.6</Version>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
     <PackageTags>nexus;link;fulcrum;lever</PackageTags>
     <Authors>XLENT Link</Authors>
@@ -49,11 +49,12 @@
     <Copyright>Copyright ©2021 Xlent Link AB</Copyright>
     <IncludeSymbols>true</IncludeSymbols>
     <PackageReleaseNotes>
+      5.1.6 Changed how we deal with database patching.
       5.1.5 Now uses ToGuidString()
       5.1.4 Missing inheritence to Activity{T}
       5.1.3 ActivityAction{T} now inherits from Activity{T}
       5.1.2 Support for larger enum values in database
-	    5.1.1 Introduced IActivity{T}
+      5.1.1 Introduced IActivity{T}
       5.1.0 Test support. CreateActivity now does not specify title. Added DefineActivity for WerkflowVersion
       5.0.2 Introduced IWorkflowEngineRequiredCapabilities
       5.0.1 Bump
