--- a/src/AsyncManager.Sdk.AspNet/AsyncManager.Sdk.AspNet.csproj
+++ b/src/AsyncManager.Sdk.AspNet/AsyncManager.Sdk.AspNet.csproj
@@ -20,7 +20,7 @@
 
   <ItemGroup>
     <PackageReference Include="Nexus.Link.Libraries.Web.AspNet" Version="3.0.1" />
-    <PackageReference Include="Nexus.Link.Libraries.Core" Version="5.10.0" />
+    <PackageReference Include="Nexus.Link.Libraries.Core" Version="5.11.0" />
   </ItemGroup>
 
   <ItemGroup>
@@ -29,7 +29,7 @@
 
   <PropertyGroup>
     <PackageId>Nexus.Link.AsyncManager.Sdk.AspNet</PackageId>
-    <Version>1.0.0</Version>
+    <Version>1.0.1</Version>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
     <PackageTags>nexus;link;fulcrum;lever</PackageTags>
     <Authors>XLENT Link</Authors>
@@ -39,6 +39,7 @@
     <Copyright>Copyright ©2021 Xlent Link AB</Copyright>
     <IncludeSymbols>true</IncludeSymbols>
     <PackageReleaseNotes>
+      1.0.1 Bump
       1.0.0 First release
     </PackageReleaseNotes>
     <LangVersion>latest</LangVersion>
